[package]
name = "nannou-sketches"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2021"

[dependencies]
nannou = "0.15"

[profile.dev]
debug = false

# Override dependency profiles.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
# Optimize dependencies to speed up dev builds.
opt-level = 3
debug = false

# [patch.crates-io]
# nannou = { path = "../../rust-libs/nannou" }
